--- a/tester/tester.vcxproj
+++ b/tester/tester.vcxproj
@@ -97,6 +97,9 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>E:\git\libs\utility\stringlib\include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -132,6 +135,9 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>E:\git\libs\utility\stringlib\include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -144,6 +150,9 @@
     <ClCompile Include="tester.c" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\platformlib\platformlib.vcxproj">
+      <Project>{93283736-9188-424f-bb81-4acfb449b6c2}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\stringlib\stringlib.vcxproj">
       <Project>{3d01106f-49fd-4639-a0a7-623ba0737810}</Project>
     </ProjectReference>
